Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8.3, 6.9
-
None
-
-
8145cd06a (dev), 3341ecadd (6.9), 6377bb87e (6.8)
Description
Building the QtMultimedia module from source fails due to a missing include for QVersionNumber in qgstreameraudiooutput.cpp
error: unknown type name 'QVersionNumber'
error: use of undeclared identifier 'QVersionNumber'
#include <QtCore/qversionnumber.h> should be added to qgstreameraudiooutput.cpp