GStreamer: add missing header

Fixes: QTBUG-135939
Pick-to: 6.8 6.9
Change-Id: Id2f20baf08f015573211a04b2e447a9684c1e781
Reviewed-by: Liang Qi <liang.qi@qt.io>